--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ button {
     border-radius:0;
     padding:0;
     overflow:visible;
-    cursor:none;
+    cursor:pointer;
 }
 
 textarea { border: unset; resize: none; }
