--- a/src/pages/Mypage/Mypage.scss
+++ b/src/pages/Mypage/Mypage.scss
@@ -2,14 +2,38 @@
 
 .Mypage { @include pageHeight; }
 .mypage_wrap {
-    .mypage_top { padding: 25px;
-        .photo img { width: 150px; height: 150px; border-radius: 50%; }
-        .email {}
-        .logout {}
-        .introduce {}
-        .introduce_edit {}
-        .introduce_content {}
-        .introduce_text {}
-        .introduce_modify {}
+    .mypage_top { display: flex; justify-content: space-evenly; padding: 25px; border-bottom: 1px solid #ddd;
+        .photo_wrap {
+            .photo img { @include wH(120px, 120px); border-radius: 50%; }
+        }
+        .user_infomation {
+            .email_setting_wrap { display: flex; padding: 5px 0 10px 0;
+                .email { font-size: 22px; }
+                .setting { position: relative; padding-left: 15px;
+                    svg { cursor: pointer; }
+                    .setting_popup { @include flexColumnCenter; position: absolute; top: 30px; right: 50%; transform: translateX(50%); width: 150px; background: rgb(64, 130, 130); text-align: center;
+                        div { width: 100%; padding: 15px 0; cursor: pointer; color: #fdfdfd;
+                            &:not(:last-child) { border-bottom: 1px solid rgb(80 150 150); }
+                        }
+                    }
+                }
+            }
+            .introduce_text {}
+        }
     }
 }
+
+
+// setting_popup start!
+.setting_popup_bg { position: absolute; top: 45px; left: 0; width: 100%; height: calc(100% - 105px); background-color: rgba(0,0,0,.7); }
+.setting_popup_nickname { @include position50(45%); @include flexCenterCenter; flex-direction: column; background-color: #F6F7FB; width: 300px; height: 150px; color: #171717; text-align: center;
+    .nick_textarea { 
+        .nick { padding-bottom: 40px; }
+        textarea { margin-bottom: 40px; padding: 5px; border: 1px solid #dbdbdb; background-color: #F6F7FB; text-align: center; }
+    }
+    .popup_btn { display: flex; position: absolute; bottom: 0; width: 100%; border-top: 1px solid #dbdbdb;
+        .popup_btn_yes { width: 50%; padding: 15px 0; border-right: 1px solid #dbdbdb; cursor: pointer; }
+        .popup_btn_no { width: 50%; padding: 15px 0; cursor: pointer; }
+    }
+}
+// setting_popup end!
