--- a/src/pages/Mixin.scss
+++ b/src/pages/Mixin.scss
@@ -1,5 +1,6 @@
-@mixin pageHeight { width: 100%; height: calc(100vh - 60px); overflow-y: scroll; }
+@mixin pageHeight { width: 100%; height: calc(100vh - 105px); overflow-y: scroll; }
 @mixin flexColumnCenter { display: flex; flex-direction: column; align-items: center; }
+@mixin flexCenterCenter { display: flex; align-items: center; justify-content: center; }
 @mixin bgRPS { background-repeat: no-repeat; background-position: center center; background-size: cover; }
 @mixin position50($top: 50%) { position: absolute; top: $top; left: 50%; transform: translate(-50%, -50%); }
 @mixin wH($width: 0, $height: 0) { width: $width; height: $height; }
